plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'nbu.cscb869'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring dependencies
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Security and Keycloak
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.keycloak:keycloak-spring-boot-starter:25.0.3'
    implementation 'org.keycloak:keycloak-admin-client:25.0.3'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ModelMapper
    implementation 'org.modelmapper:modelmapper:3.2.2'

    // Configuration processor
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Development tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // Cloudinary
    implementation 'com.cloudinary:cloudinary-http44:1.39.0'
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.aspectj:aspectjweaver'

    // Messaging
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.sendgrid:sendgrid-java:4.10.3'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:mysql:1.20.1'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = 'MedicalRecordSystem-0.0.1-SNAPSHOT.jar'
}

